src/engine/horizon/rust/render-post/src/tests/err-mismatched-closing-tag/expected.stderr
[31merror:[0m mismatched closing tag, expected `</note>`
   ╭─[ <unknown>:5:1 ]
   │
 1 │ <note>
   │ ┬  
   │ ╰── ... when reading this element
   │ 
 5 │ </div>
   │ ───┬──  
   │    ╰──── mismatched closing tag, expected `</note>`
───╯

compilation failed
